TAG: uniprotload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key != 2  changed to "= 1"

TAG: uniprotload-6-0-4-4
DATE: 06/15/2016
STAFF: sc
CHANGES: but in overrideQC.py query for sequence object in MGI must lower
a.accid to find the uniprot accession id

TAG: uniprotload-6-0-4-3
TAG: uniprotload-6-0-4-2
TAG: uniprotload-6-0-4-1
DATE: 04/27/2016, 05/09/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: uniprotload-6-0-3-1
DATE: 03/23/2016
STAFF: lec
CHANGES: removed comments regarding old max length values for note chunks

TAG: uniprotload-6-0-2-1
DATE: 01/27/2016
STAFF: sc
CHANGES: TR12218 curator overrides (part of project TR11937)

TAG: uniprotload-tr11937-8
TAG: uniprotload-tr11937-7
DATE: 01/11/2016
STAFF: sc
CHANGES: US139 - implement load script
1) index.html - 'Master' Input File
2) overrideload.sh - archive input file in main archive file, not separately
3) overrideload.py - remove createAssocFile function
4) uniprotload.sh - added call to overrideload.sh
5) overrideQC.py - new QC
	remove blank lines from load ready file
	report no sequence object for uniprot id
	report non-mouse uniprot id

TAG: uniprotload-tr11937-6
TAG: uniprotload-tr11937-5
DATE: 01/06/2016
STAFF: sc
CHANGES: US139 - implement load script
1. overrideload.config.default
2. override_assoc.config.default - new
	new: INPUT_FILE_ASSOC
	removed: LAST_RUN
	new: ASSOCLOAD_SH
3. overrideload.sh, overrideload.py - new

TAG: uniprotload-tr11937-4
DATE: 01/06/2016
STAFF: sc
CHANGES: US139 - implement load script
1) Install - change perms of override_toload.txt output file which is created
   by the QC script, so curators can run
2) overrideload.py - updated comments. split four fatal errors into four diff-
   erent sections in the QC report. Updated QC report section header text.

TAG: uniprotload-tr11937-3
TAG: uniprotload-tr11937-2
DATE: 01/03/2016
STAFF: sc