@@ -1,3 +1,11 @@
+TAG: uniprotload-6-0-5-?
+DATE: 09/27/2016
+STAFF: lec
+CHANGES:
+TR12240/modificaiton to EC2GO
+exclude EC ids with "-" from EC2GO
+makeGOAnnot.py
+
 TAG: uniprotload-6-0-5-1
 DATE: 09/01/2016
 STAFF: lec 
